--- a/ProductService/productservice/src/main/resources/application.properties
+++ b/ProductService/productservice/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=productservice
+# Server Configuration
+server.port=8081
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:productdataservice}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:}
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+## Logging Configuration
+#logging.level.root=INFO
+#logging.level.org.springframework=ERROR
+#logging.level.org.hibernate=DEBUG
