Docker container implementation completed

--- a/ProductService/productservice/pom.xml
+++ b/ProductService/productservice/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.product</groupId>
 	<artifactId>productservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>productservice</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
